k8s/k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: counter.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: counter-service
            port:
              number: 80
